# flask-simple-auth

./: .gitignore  DOCUMENTATION.md  FlaskSimpleAuth.py  MANIFEST.in  Makefile  README.md  SECURITY.md  VERSIONS.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: doc.yml  fsa.yml
FlaskSimpleAuth/: __init__.py
demo/: .gitignore  Makefile  README.md  app-db.conf  app-pg.conf  app-pg2.conf  app.conf  app.py  auth.py  authb.py  care.py  create-db.sql  create-pg.sql  create.sql  curl-demo.sh  curl-todos.sh  curls.sh  data.sql  database.py  falcon-simple-curl.sh  falcon-simple-fsa.py  falcon-simple-init.py  fastapi-oauth2-jwt-curl.sh  fastapi-oauth2-jwt-fsa.conf  fastapi-oauth2-jwt-fsa.py  fastapi-oauth2-jwt-init.py  flask-restful-todos-curl.sh  flask-restful-todos-fsa.conf  flask-restful-todos-fsa.py  flask-restful-todos-init.py  mfa.py  model.py  oauth.py  pass.py  queries.sql  scare.py  stuff.py  test_demo.py  todos-frf.py  todos-fsa.py  (+3 more)
docs/: CONFIG.md  DOCUMENTATION.md  INTRO.md  RECIPEES.md  RECIPES.md  TODO.md  TUTORIAL.md  VERSIONS.md  conf.py  index.rst
doctrees/: DOCUMENTATION.doctree  VERSIONS.doctree  environment.pickle  index.doctree
doctrees/autoapi/: index.doctree
doctrees/autoapi/FlaskSimpleAuth/: index.doctree
doctrees/autoapi/conf/: index.doctree
html/: .buildinfo  DOCUMENTATION.html  VERSIONS.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
html/_sources/autoapi/: index.rst.txt
html/_sources/autoapi/FlaskSimpleAuth/: index.rst.txt
html/_sources/autoapi/conf/: index.rst.txt
html/_static/: documentation_options.js
html/autoapi/: index.html
html/autoapi/FlaskSimpleAuth/: index.html
html/autoapi/conf/: index.html
test/: App.py  AppBad.py  AppExt.py  AppFact.py  AppHttpAuth.py  AppMisc.py  Auth.py  Makefile  SubApp.py  test_flask.py
tests/: App.py  AppExt.py  AppFact.py  AppHttpAuth.py  Auth.py  Makefile  Shared.py  app.py  digest_auth.py  shared_auth.py  subapp.py  test_flask.py  test_no_flask.py
