[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FlaskSimpleAuth"
version = "35.3"
authors = [ { name = "Fabien Coelho", email = "flask.auth@coelho.net" } ]
description = "Simple authentication, authorization and parameters for Flask, emphasizing configurability"
readme = "README.md"
license = "CC0-1.0"
# Flask 2.3 requires Python 3.9 (3.8?) and is compatible with 3.12
# I'm tired of verbose type hints such as Optional[foo]
requires-python = ">=3.10"
dependencies = [
  "flask >= 3.0",
  "ProxyPatternPool >= 1.0",
  # NOTE although caching can be desactivated, it is definitely useful,
  # so make the dependency mandatory:
  "CacheToolsUtils >= 10.0"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
repository = "https://github.com/zx80/flask-simple-auth"
documentation = "https://zx80.github.io/flask-simple-auth/"
issues = "https://github.com/zx80/flask-simple-auth/issues"
package = "https://pypi.org/project/FlaskSimpleAuth/"

[project.optional-dependencies]
# various dev tools
dev = [
  "mypy", "pyright",
  "types-flask", "types-requests", "types-cachetools", "types-redis",
  "flake8", "black", "ruff",
  "pytest", "coverage",
  "pymarkdownlnt!=0.9.5"
]
# pypi publication deps
pub = [ "build", "twine", "wheel" ]
# documentation generation
doc = [ "sphinx", "sphinx_rtd_theme", "sphinx-autoapi", "sphinx-lint", "myst_parser" ]
# NOTE also: password jwt cors httpauth
tests = [ "requests", "pydantic>=2.0" ]
demo = [ "anodb", "psycopg", "psycopg2", "types-cachetools" ]
# password management
password = [
  "bcrypt",
  # FIXME argon2 works with 3.13 but *not* 3.13t
  "argon2-cffi",
  # "argon2-cffi; python_version != '3.13'",
  # "argon2; python_version == '3.13'", 
  "scrypt",
  "pyotp",
  "passlib",
  "crypt_r; python_version >= '3.13'",  # crypt replacement for passlib
]
# python-ldap requires python3-dev libldap-dev libsasl2-dev gcc
ldap = [ "ldap3" ]
# cache options
redis = [ "redis" ]  # types-redis
memcached = [ "pymemcache" ]
# FIXME 2025-11-22 CFFI issues when installing on 3.13t
# on cryptography:
# CFFI does not support the free-threaded build of CPython 3.13.
# Upgrade to free-threaded 3.14 or newer to use CFFI with the free-threaded build.
jwt = [ "pyjwt", "cryptography" ]
# external web utils
cors = [ "flask_cors" ]
httpauth = [ "flask_httpauth" ]

[tool.setuptools]
py-modules = [ "FlaskSimpleAuth" ]

[tool.black]
line-length = 100
target-version = ["py310"]
