[metadata]
name = FlaskSimpleAuth
version = 4.7.1
author = Fabien Coelho
author_email = flask.auth@coelho.net
url = https://github.com/zx80/flask-simple-auth
description = Simple authentication, authorization and parameters for Flask, emphasizing configurability
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python
    Environment :: Web Environment
    Framework :: Flask
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules =
    FlaskSimpleAuth
# install_requires = flask >= 2.0
# install_requires = flask < 2.0
install_requires = flask
# not always necessary: cachetools passlib pyjwt cryptography bcrypt flask_httpauth flask_cors
