[metadata]
name = FlaskSimpleAuth
version = 21.4
author = Fabien Coelho
author_email = flask.auth@coelho.net
url = https://github.com/zx80/flask-simple-auth
description = Simple authentication, authorization and parameters for Flask, emphasizing configurability
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python
    Environment :: Web Environment
    Framework :: Flask
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    documentation = https://zx80.github.io/flask-simple-auth/
    issues = https://github.com/zx80/flask-simple-auth/issues
    package = https://pypi.org/project/FlaskSimpleAuth/
    sources = https://github.com/zx80/flask-simple-auth

[options]
py_modules =
    FlaskSimpleAuth
install_requires =
    flask >= 2.2
    ProxyPatternPool >= 1.0
    # not although caching can be desactivated, it is definitely
    # useful so make the dependency mandatory.
    CacheToolsUtils >= 4.0

[options.extras_require]
# password management
password =
    passlib
    bcrypt
# cache options
redis =
    redis
memcached =
    pymemcache
# JWT support
jwt =
    pyjwt
    cryptography
# web utils
cors =
    flask_cors
httpauth =
    flask_httpauth
